syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package api.status.v1;

option go_package = "api/status/v1";

service UptimeService {
  rpc GetUptime(google.protobuf.Empty) returns (UptimeResponse) {}
}

message UptimeResponse {
  int64 uptime = 1;
  google.protobuf.Timestamp started = 2;
}